--- a/covid_tracker/templates/index.html
+++ b/covid_tracker/templates/index.html
@@ -2,10 +2,32 @@
 <html>
 <head>
   <title>{{title}}</title>
+  <style type="text/css">
+    body {
+      background-image: url('https://cdn.pixabay.com/photo/2020/04/12/15/37/virus-5038284_960_720.jpg');
+      background-size: cover;
+      color: white;
+      font-family: Arial, sans-serif;
+    }
+    h1 {
+      text-align: center;
+      font-size: 4rem;
+      margin-top: 5%;
+    }
+    p {
+      text-align: center;
+      font-size: 2rem;
+      margin-top: 2%;
+    }
+    a {
+      color: white;
+      text-decoration: none;
+    }
+  </style>
 </head>
 <body>
   <h1>{{heading}}</h1>
-  <p><a href="/covid">Check USA Covid situation.</p>
-  <p><a href="/exe">There will be data from Postgres DB.</p>
+  <p><a href="/covid">Check USA Covid situation.</a></p>
+  <p><a href="/exe">There will be data from Postgres DB.</a></p>
 </body>
 </html>
